ScrollToClick setting does not update when changed
Categories
(Core :: Widget, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox90 | --- | wontfix |
| firefox91 | --- | fixed |
| firefox92 | --- | fixed |
People
(Reporter: enndeakin, Assigned: mstange)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
The bug 1702756 added some caching for LookAndFeel, but some system settings need to be looked up each time.
I only tested a few on Mac but at least the TabFocusModel (keyboard tabbing behaviour) and ScrollToClick (System Preferences -> General -> Click in the scroll bar to) no longer update when the setting is changed and I must exit Firefox to see the changes.
This is most notable with TabFocusModel since I can no longer press Ctrl+F7 to change it.(I found this bug when trying to check 1600430)
Comment 1•4 years ago
|
||
We should observe changes to that setting instead, and call LookAndFeel::NotifyChangedAllWindows presumably with a new change bit that means "no layout or style changed at all".
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
Let's make this bug about the ScrollToClick pref. If we find other prefs that are affected, we can file new bugs for each of them.
| Assignee | ||
Comment 3•4 years ago
|
||
Depends on D119680
Comment 5•4 years ago
|
||
| bugherder | ||
Comment 6•4 years ago
|
||
Is this something we should consider uplifting to 91?
| Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 9230821 [details]
Bug 1715786 - Observe dynamic changes to the ScrollToClick system pref. r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: If a scrollbar-related macOS system preference is changed while Firefox is running, the new value is only respected after a Firefox restart.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce: 1. In a scrollbar in Firefox, click in the track and check whether it jumps to the clicked position or scrolls one page.
- Change the macOS system setting in the General pane.
- Repeat step 1 and check if the behavior respects the new setting.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very low, only adds a listener for a system notification.
- String changes made/needed:
Comment 8•4 years ago
|
||
Comment on attachment 9230821 [details]
Bug 1715786 - Observe dynamic changes to the ScrollToClick system pref. r=emilio
regression fix, approved for 91 rc1
Comment 9•4 years ago
|
||
As far as I can tell this patch depends on bug 1600430?
Updated•4 years ago
|
Updated•4 years ago
|
Comment 10•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Description
•