Bug 1715786 - Observe dynamic changes to the ScrollToClick system pref. r=emilio, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D119684